New version of introduction

--- a/manuscript/_assets/references.bib
+++ b/manuscript/_assets/references.bib
@@ -423,6 +423,54 @@
   publisher={Wiley Online Library}
 }
 
+@inproceedings{kentner2015rhythmic,
+  title={Rhythmic segmentation in auditory illusions-Evidence from cross-linguistic mondegreens.},
+  author={Kentner, Gerrit},
+  booktitle={ICPhS},
+  year={2015}
+}
+
+@article{beck2014mondegreens,
+  title={Mondegreens and soramimi as a method to induce misperceptions of speech content--Influence of familiarity, wittiness, and language competence},
+  author={Beck, Claudia and Kardatzki, Bernd and Ethofer, Thomas},
+  journal={PloS one},
+  volume={9},
+  number={1},
+  pages={e84667},
+  year={2014},
+  publisher={Public Library of Science San Francisco, USA}
+}
+
+@article{dupoux1999epenthetic,
+  title={Epenthetic vowels in Japanese: A perceptual illusion?},
+  author={Dupoux, Emmanuel and Kakehi, Kazuhiko and Hirose, Yuki and Pallier, Christophe and Mehler, Jacques},
+  journal={Journal of experimental psychology: human perception and performance},
+  volume={25},
+  number={6},
+  pages={1568},
+  year={1999},
+  publisher={American Psychological Association}
+}
+
+@article{peperkamp2008perceptual,
+  title={On the perceptual origin of loanword adaptations: experimental evidence from Japanese},
+  author={Peperkamp, Sharon and Vendelin, Inga and Nakamura, Kimihiro},
+  journal={Phonology},
+  volume={25},
+  number={1},
+  pages={129--164},
+  year={2008},
+  publisher={Cambridge University Press}
+}
+
+@inproceedings{otake2007interlingual,
+  title={Interlingual near homophonic words and phrases in L2 listening: Evidence from misheard song lyrics},
+  author={Otake, Takashi},
+  booktitle={Proceedings of the 16th International Congress of Phonetic Sciences (ICPhS 2007)},
+  pages={777--780},
+  year={2007},
+  organization={University of Glasgow Saarbr{\"u}cken}
+}
 
 @article{dijkstra2010cross,
   title={How cross-language similarity and task demands affect cognate recognition},
